--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -16,15 +16,16 @@ hr {
 //PAGE SPECIFIC BACKGROUNDS
 .background-news{
   background: radial-gradient(
-    rgba(96,92,168,.2) 1%,rgba(96,92,168,1) 100%),
+                  rgba(70,67,84,.2) 1%,
+                  rgba(70,67,84,1) 100%),
               url('/storage/bh.jpg');
   background-size: cover;
   z-index: -2;
 }
 .background-teams{
    background: radial-gradient(
-                   rgba(96,92,168,.2) 1%,
-                   rgba(96,92,168,1) 100%
+                   rgba(70,67,84,.2) 1%,
+                   rgba(70,67,84,1) 100%
    ),
    url('/storage/rainbow6.jpg');
    background-size: cover;
@@ -33,8 +34,8 @@ hr {
  }
 .background-tournament{
   background: radial-gradient(
-    rgba(96,92,168,.2) 1%,
-    rgba(96,92,168,1) 100%
+    rgba(70,67,84,.2) 1%,
+    rgba(70,67,84,1) 100%
     ),
     url('/storage/hearthstone.jpg');
   background-size: cover;
@@ -45,7 +46,8 @@ hr {
 }
 .background-matches{
   background: radial-gradient(
-    rgba(96,92,168,.2) 1%,rgba(96,92,168,1) 100%
+                  rgba(70,67,84,.2) 1%,
+                  rgba(70,67,84,1) 100%
     ),
     url('/storage/overwatch-3.jpg');
   background-size: cover;
@@ -103,6 +105,9 @@ hr {
   .card-link {
     color: #FFF;
     font-weight: 700;
+  }
+  .card-text{
+    color: #FFF;
   }
 }
 
@@ -199,16 +204,39 @@ hr {
   margin-right: auto;
 }
 
+.carousel-item
+{
+  h5{
+    font: $font-primary;
+    font-size: 22px;
+  }
+  p{
+    color: $dgl-blue !important;
+    font-weight: 800;
+    background-color: rgba(126, 100, 209, .4);
+    &:hover{
+      color: #FFF !important;
+    }
+  }
+}
 .carousel-indicators li{
   transform: skewX(-20deg);
+}
+
+.carousel-caption{
+  top: 15%;
 }
 
 // Componenets
 body{
 
+  font-size: 15px;
+  font-family: $font-copy;
+  line-height: 1.618;
 
-
-
+  p{
+    font-size: 1.15em;
+  }
   .dgl-ol li {
     counter-increment: list;
     list-style-type: none;
@@ -238,7 +266,7 @@ body{
   //Thumbnail for video
   .video-thumbnail-link{ //thumbnail main <a>
     text-decoration: none;
-    color: $dgl-primary;
+    color: $dgl-dark;
   .video-thumbnail{
     text-decoration: none;
     position: relative;
@@ -326,7 +354,7 @@ body{
 
   .team-logo-300{
     width: 100%;
-    background-color: $dgl-darkergray;
+    background-color: darken(desaturate($dgl-purple, 25%),20%);
   }
   .team-logo-300-trans{
     width: 100%;
@@ -347,17 +375,18 @@ body{
     //background-color: white;
 
     label{
-      color: $dgl-primary
+      color: $dgl-blue;
     }
 
     input{
-      border-color: $dgl-primary;
+      border-color: $dgl-blue;
       background-color: transparent;
       color: $dgl-blue;
 
       &:focus{
-        background-color: $dgl-purple;
-        color: $dgl-primary;
+        background-color: $dgl-blue;
+        border-color: $dgl-purple;
+        color: $dgl-dark;
       }
     }
     .list-group-item{
@@ -372,12 +401,18 @@ body{
 
   .slide-link{
     text-decoration: none;
-    h1{
-      color: #FFF;
-
+    h1, h5{
+      color: saturate($dgl-purple, 20%);
+      //background-color: rgba(126, 100, 209, .5);
+      //text-shadow:  5px 5px $dgl-purple;
+      //text-;
       &:hover{
-        color: $dgl-primary;
+        color: $dgl-lightergray;
       }
+    }
+
+    h1{
+      font-size: 4em;
     }
   }
 
@@ -499,6 +534,8 @@ body{
   .navbar{ // bootstrap override
     padding: 0 !important;
     background-color: $dgl-darkergray;
+
+
   }
   .nav-brand{
     a{
@@ -508,32 +545,38 @@ body{
     }
   }
 
-  .navbar-dgl-background{
-    background-color: $dgl-gray !important;
-  }
 
   .navbar-dgl{
+    background-color: $dgl-darkgray !important;
+
+    .navbar-brand{
+      margin: 0;
+    }
     .navbar-toggler-icon{
     background-image: url('/storage/hamburger.svg')
+    }
+    .navbar-text{
+      font-family: $font-futura !important;
     }
 
     a{
       color: #FFF;
-      font-family: $font-primary;
+      font-family: $font-quicksand;
       font-weight: 700;
+      //text-transform: uppercase;
       text-decoration: none;
     }
     a.nav-link{
       border-bottom: 5px solid transparent;
       &:hover{
-        color: lighten($dgl-primary,10%);
+        color: $dgl-blue;
       }
     }
 
     button{ //bootstrap override
       color: #FFF;
       border-color: $dgl-lightgray !important;
-      background-color: $dgl-primary;
+      background-color: $dgl-purple;
       margin-left: 2vw;
     }
     li{
@@ -541,6 +584,16 @@ body{
         padding-right: 1vw !important;
         padding-left: 1vw !important;
       }
+    }
+  }
+
+  .jumbotron-fluid{
+    h1{
+      color: $dgl-purple;
+      text-transform: uppercase;
+    }
+    p{
+      color: $dgl-lightgray;
     }
   }
 
@@ -573,7 +626,7 @@ body{
   }
 
   .main{
-    background-color: $dgl-darkgray;
+    background-color: $dgl-lightergray;
   }
 
   .main-slot{
@@ -587,7 +640,7 @@ body{
       text-decoration: none;
       .post-title {
 
-        color: $dgl-lightergray;
+        color: $dgl-gray;
         text-decoration: none;
         margin-top : 5px;
       }
@@ -597,7 +650,8 @@ body{
   .post-body-hover{
     &:hover{
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      background-color: $dgl-lightgray;
+      background-color: #FFF;
+      border: 1px solid $dgl-purple;
       cursor: pointer;
 
       p{
@@ -612,14 +666,17 @@ body{
 
   //Footer
   .footer {
-    background-color: $dgl-darkergray;
+    background-color: $dgl-darkgray;
     padding-top: 2em;
     font-family: $font-primary;
-
+    h5{
+      font-family: $font-quicksand;
+      font-size: 1rem;
+    }
     a{
       color: $dgl-gray;
-      font-family: $font-primary;
-      font-weight: 700;
+      font-family: $font-quicksand;
+      //font-weight: 700;
       text-decoration: none;
 
       &:hover{
