--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -4,6 +4,13 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'FuturaLight';
+  src: url('/fonts/FuturaLT-Light.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
 // Borders
 .white-border{
   border-color: #FFF !important;
