Updating banners of other pages.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -163,53 +163,8 @@ hr {
   padding: 0;
 }
 
-.background-news {
-  background: radial-gradient(rgba(70, 67, 84, 0.2) 1%, #464354 100%), url("/storage/bh.jpg");
-  background-size: cover;
-  z-index: -2;
-}
-
-.background-teams {
-  background: radial-gradient(rgba(70, 67, 84, 0.2) 1%, #464354 100%), url("/storage/rainbow6.jpg");
-  background-size: cover;
-  background-position: center bottom;
-  z-index: -2;
-}
-
-.background-tournament {
-  background: radial-gradient(rgba(70, 67, 84, 0.2) 1%, #464354 100%), url("/storage/hearthstone.jpg");
-  background-size: cover;
-  z-index: -2;
-}
-
 .background-a-tournament {
   background-size: cover;
-}
-
-.background-matches {
-  background: radial-gradient(rgba(70, 67, 84, 0.2) 1%, #464354 100%), url("/storage/overwatch-3.jpg");
-  background-size: cover;
-  background-position: center top;
-  z-index: -2;
-}
-
-.background-players {
-  background: radial-gradient(rgba(96, 92, 168, 0.2) 1%, #605ca8 100%), url("/storage/lanparty1.jpg");
-  background-size: cover;
-  background-position: center bottom;
-  z-index: -2;
-}
-
-.overlay {
-  z-index: -1;
-  height: 100%;
-  width: 100%;
-  position: fixed;
-  overflow: hidden;
-  top: 0px;
-  left: 0px;
-  background: rgba(0, 0, 0, 0.7);
-  /*can be anything, of course*/
 }
 
 .jumbotron-atournament {
@@ -767,6 +722,32 @@ body .top-banner {
   padding: 10px 0;
   color: #FFF;
   font-weight: 700;
+}
+
+body .banner-row {
+  margin-top: 50px;
+}
+
+body .banner-row .banner-row-background {
+  width: 100%;
+  z-index: -2;
+  position: relative;
+}
+
+body .banner-row h1 {
+  z-index: 2;
+  position: absolute;
+  top: 40%;
+  left: 10%;
+  text-transform: uppercase;
+  color: #FFF;
+}
+
+body .banner-row .banner-icon {
+  position: absolute;
+  z-index: 2;
+  top: 40%;
+  right: 10%;
 }
 
 body .title-banner-img-container {
